# nexus

./: .gitignore  README.md  ansible.cfg  pyproject.toml
app/: config.py  dependencies.py  engine.py  exceptions.py  main.py  models.py
files/certs/esvibox.com/: cert.pem  fullchain.pem  privkey.pem
files/scripts/: check-crt.sh  cleanmem.sh  ext-ip.sh
files/skels/: dot.bashrc  dot.tmux.conf
inventory/: host.yml.template
inventory/group_vars/all/: vars.yml.template  vault.yml.template
inventory/group_vars/gv_debian/: vars.yml.template  workflow.yml.template
inventory/group_vars/gv_synology/: .env.template  vars.yml.template  workflow.yml.template
inventory/host_vars/: test-vm.yml.template
output/: .gitkeep
templates/base/: footer.sh.j2  header.sh.j2  purge.sh.j2
templates/tasks/: 00-persistence.sh.j2  01-hosts.sh.j2  02-sshd.sh.j2  03-password.sh.j2  04-keys.sh.j2  05-auth.sh.j2  06-scripts.sh.j2  07-skels.sh.j2  08-ssl.sh.j2  99-clean.sh.j2
templates/web/: bootstrap.sh.j2  status.html
utils/: check_inventory.sh  init_db.py  manager.sh  run.sh  test_env.py  vault.sh
utils/aux/: nexus.vhost
